# attacker-personas

./: .gitignore  CONTRIBUTING.md  INTEGRATION_GUIDE.md  LICENSE  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt  setup.py
agent_bounty/agents/: red_team_agent_v2.py
agent_bounty/attacker_personas/: bulk_generator.py  persona.py  persona_generator.py  persona_library.py
agent_bounty/integration/: migration_toolkit.py  persona_adapter.py
agent_bounty/threat_intelligence/: mitre_stix_client.py
api/: personas_controller.py
assets/images/: .gitkeep
examples/: integration_examples.py
scripts/: generate_all_personas.py
tests/attacker_personas/: test_mitre_stix_client.py  test_persona.py  test_persona_library.py  test_red_team_agent_v2.py
